[Fixes #159719529] resize search bar on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -414,8 +414,8 @@ ul li {
         margin: 0 auto;
     }
 
-    .header column-center {
-      display: block;
+    .nav .column-center {
+      flex: initial;
     }
     .banner .column-two {
       display: none;
